# aco-prompt-shield

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
src/shield_mcp/: server.py
src/shield_mcp/detectors/: heuristics.py  ml_models.py  structural.py
src/shield_mcp/utils/: config.py
tests/: test_full_server.py  test_heuristics.py  test_ml_integration.py  test_server_logic.py  test_structural.py
