[project]
name = "shield-mcp"
version = "0.1.0"
description = "A Local-First, Zero-Cost Prompt Injection Detection Server for the Model Context Protocol."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "transformers",
    "torch",
    "numpy",
    "scipy",
    "safetensors"
]

[project.optional-dependencies]
dev = [
    "pytest"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shield_mcp"]
